--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,16 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Generated chart
+*chart.png
+*chart.html
+*chart.svg
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 build/
 *egg-info/
+__pycache__/
 
 .vscode
 .DS_Store
