Adding a makefile target for native go go-pdk plugin.
Using default go compiler to build the wasm.   Wasm built
from go is much bigger than that of tinygo.

Also tested other pdks.  Zig size is about the same as tinygo.
Making it a pretty attractive candidate.

C pdk build is much much smaller than tinygo.  So people may
ends up writing C code again!

--- a/plugin/hello/Makefile
+++ b/plugin/hello/Makefile
@@ -1,6 +1,8 @@
 hello.wasm:
 	tinygo build -o hello.wasm -no-debug -panic=trap -scheduler=none -target wasi main.go 
 
+hello2.wasm:
+	GOOS=wasip1 GOARCH=wasm go build -tags std -o hello2.wasm .
 run:
 	extism call hello.wasm mowasm_hello --input world --wasi
 	extism call hello.wasm mowasm_add --input "[3,5]" --wasi
